Affix bug on Safari: refactor event navigation

--- a/src/less/includes/element.less
+++ b/src/less/includes/element.less
@@ -24,20 +24,18 @@
   font-weight: bold;
 }
 
+.event-layout-aside {
+  @media (min-width: @screen-md-min) {
+    margin-top: 44px;
+  }
+
+  button {
+    margin-bottom: 15px;
+  }
+}
+
 #eventForm hr {
   border-top: 5px solid #EEEEEE;
-}
-
-.event-pills {
-  a {
-    color: @fourth-brand-color;
-  }
-}
-
-.event-actions {
-  @media (max-width: @screen-xs-max) {
-    margin-top: 15px;
-  }
 }
 
 .expense-board {
