--- a/src/less/includes/main.less
+++ b/src/less/includes/main.less
@@ -35,10 +35,6 @@ a {
   line-height: 35px;
 }
 
-.btn-huge {
-  .button-size(@padding-huge-vertical; @padding-huge-horizontal; @font-size-large; @line-height-large; @btn-border-radius-large);
-}
-
 .btn-load-more {
   .button-variant(@btn-load-more-color; @btn-load-more-bg; @btn-load-more-border);
 }
