--- a/src/less/includes/variables.less
+++ b/src/less/includes/variables.less
@@ -6,7 +6,7 @@
 @fourth-brand-color: #1b435d;
 @inverse-brand-color: #fff;
 
-@text-color: #555555;
+@text-color: #5c5c5c;
 @border-color: #ddd;
 
 @brand-primary: @main-brand-color;
